# app_dev_maint_MDEV_EMTAC

./: .gitattributes  .gitignore
projects/MODEL_TRAINING/: .env  dir_expir.py  pyproject.toml  validate_all_db_configs.py  validate_model_training_paths.py
projects/MODEL_TRAINING/configuration/: config.py  config_env.py  config_mlflow_vars.py  log_config.py  mlflow_utils.py
projects/MODEL_TRAINING/intent_ner_training/: test_drawings_model.py
projects/MODEL_TRAINING/mlflow_training/db/: inspect_mlflow_tables.py
projects/MODEL_TRAINING/scrap_scripts/: scrp.py
services/mcp_server/: .env.example  .gitignore  HOW_TO_CONNECT_AND_USE_POSTGRES_MCP.md  README.md  README_AI_GATEWAY.md  README_GRAFANA_MCP.md  pyproject.toml  run_mcp_coordinator.ps1
services/mcp_server/ai_layer/: ai_gateway_client.py  ai_rest_app.py  dashboard_tool_definitions.py  gateway.py  mcp_client.py  settings.py
services/mcp_server/app/: web_ui.py
services/mcp_server/clients/: example_postgres_mcp_ui_client.py  postgres_mcp_ui_client.py
services/mcp_server/docs/: HOW_TO_CONNECT_AND_USE_POSTGRES_MCP.md  README_AI_GATEWAY.md  README_POSTGRES_MCP.md
services/mcp_server/documentation/: HOW_TO_CONNECT_AND_USE_POSTGRES_MCP.md  README.md  README_AI_GATEWAY.md  README_GRAFANA_MCP.md  README_POSTGRES_MCP.md
services/mcp_server/listed_server/: __init__.py
services/mcp_server/mcp_server/: db.py  server.py  settings.py  sql_safety.py
services/mcp_server/scripts/: setup_ai_gateway.ps1  setup_grafana_mcp.ps1  setup_postgres_mcp.ps1
services/mcp_server/tests/: test_router.py  test_sql_safety.py
(+961 files in other folders)
